--- a/event_types.org
+++ b/event_types.org
@@ -12,7 +12,7 @@
 |   7 | time_period     | m8f_aas_save_on_time_period     | false   | Time passed.                    |
 |   8 | teleport        | m8f_aas_save_on_teleport        | false   | You are moved to another place. |
 |   9 | manual          | m8f_aas_true                    | true    | Manual save.                    |
-|  10 | pomodoro        | m8f_aas_true                    | true    | Pomodoro.                       |
+|  10 | pomodoro        | m8f_aas_true                    | true    | It's time to take a break.      |
 |-----+-----------------+---------------------------------+---------+---------------------------------|
 | 100 | health_drop     | m8f_aas_save_on_health_drop     | false   | Health low.                     |
 | 101 | health_rise     | m8f_aas_save_on_health_rise     | false   | Health high.                    |
