--- a/event_types.org
+++ b/event_types.org
@@ -29,5 +29,6 @@
 | 203 | backpack        | m8f_aas_save_on_backpack        | true    | Backpack found.                 |
 | 204 | new_armor       | m8f_aas_save_on_new_armor       | true    | New armor type.                 |
 | 205 | big_heal        | m8f_aas_save_on_big_heal        | true    | Major healing.                  |
+| 206 | armor           | m8f_aas_save_on_armor           | false   | Armor found.                    |
 |-----+-----------------+---------------------------------+---------+---------------------------------|
 |   N | Enum            | CVar                            |         | Text                            |
