--- a/event_types.org
+++ b/event_types.org
@@ -2,8 +2,8 @@
 
 |   N | Enum            | CVar                            | Default | Text                    |
 |-----+-----------------+---------------------------------+---------+-------------------------|
-|   0 | all_kill        | m8f_aas_save_on_all_kill        | true    | All enemies eliminated. |
-|   1 | boss_kill       | m8f_aas_save_on_boss_kill       | true    | Boss eliminated.        |
+|   0 | all_kill        | m8f_aas_save_on_all_kill        | true    | All enemies down.       |
+|   1 | boss_kill       | m8f_aas_save_on_boss_kill       | true    | Boss down.              |
 |   2 | group_kill      | m8f_aas_save_on_group_kill      | false   | No active enemies.      |
 |   3 | group_alert     | m8f_aas_save_on_group_alert     | false   | New active enemies.     |
 |   4 | boss_alert      | m8f_aas_save_on_boss_alert      | true    | Boss alerted.           |
